<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="#ffffff"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/fr_ll_create_group"
        style="@style/fr_create_group_or_activity_select_image_ll_style">

        <ImageView
            style="@style/fr_create_group_or_activity_select_image_view_style"
            android:src="@mipmap/group_icon" />

        <TextView
            style="@style/fr_create_group_or_activity_select_text_view_style"
            android:text="@string/bottom_text_create_group" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fr_ll_create_activity"
        style="@style/fr_create_group_or_activity_select_image_ll_style">

        <ImageView
            style="@style/fr_create_group_or_activity_select_image_view_style"
            android:src="@mipmap/activity_icon" />

        <TextView
            style="@style/fr_create_group_or_activity_select_text_view_style"
            android:text="@string/bottom_text_create_activity" />
    </LinearLayout>
</LinearLayout>