<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/fr_et_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_group_hint"/>
</LinearLayout>